--- a/flexispot-e7.yaml
+++ b/flexispot-e7.yaml
@@ -1,87 +1,118 @@
+substitutions:
+  name: "flexispot-e7"
+  friendly_name: "Flexispot E7"
+  min_height: "73.6" # Min height + 0.1
+  max_height: "122.9" # Max height - 0.1
+
 esphome:
-  name: flexispot-e7
-  comment: Flexispot E7
+  name: ${name}
+  platform: esp32 # TODO Change to your platform
+  board: esp32dev # TODO Change to your board
   includes:
     - desk_height_sensor.h
-
-esp32:
-  board: az-delivery-devkit-v4
-  framework:
-    type: arduino
-
-logger:
-
+api:
+  
 ota:
-  - platform: esphome
-    password: !secret ota_password
+
 
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
 
-  ap:
-    ssid: 'Flexispot-E7 Fallback Hotspot'
-    password: !secret ap_password
-
-api:
-  password: !secret ha_api_password
-
-captive_portal:
+# Enable logging
+logger:
+  level: DEBUG
+  baud_rate: 0
 
 uart:
   id: desk_uart
   baud_rate: 9600
-  tx_pin: GPIO17
-  rx_pin: GPIO16
+  tx_pin: GPIO01 #green
+  rx_pin: GPIO03 #white blue
 
 sensor:
   - platform: wifi_signal
-    name: 'WiFi Signal'
+    name: "WiFi Signal"
     update_interval: 60s
 
   - platform: uptime
     name: Uptime
 
+  - platform: custom
+    lambda: |-
+      auto desk_height_sensor = new DeskHeightSensor(id(desk_uart));
+      App.register_component(desk_height_sensor);
+      return {desk_height_sensor};
+    sensors:
+      id: "desk_height"
+      name: Desk Height
+      unit_of_measurement: cm
+      accuracy_decimals: 1
+      icon: "mdi:counter"
+
 switch:
   - platform: gpio
-    name: 'Virtual Screen'
-    id: virtual_screen
+    name: "Virtual Screen"
     pin:
-      number: GPIO23
+      number: GPIO21 #blue
       mode: OUTPUT
-    restore_mode: ALWAYS_OFF
+    restore_mode: ALWAYS_ON
     internal: true
 
+button:
   - platform: uart
-    name: 'Preset 1'
+    name: "Preset 1"
     id: switch_preset1
     icon: mdi:numeric-1-box
     data: [0x9b, 0x06, 0x02, 0x04, 0x00, 0xac, 0xa3, 0x9d]
     uart_id: desk_uart
 
   - platform: uart
-    name: 'Preset 2'
+    name: "Preset 2"
     id: switch_preset2
     icon: mdi:numeric-2-box
     data: [0x9b, 0x06, 0x02, 0x08, 0x00, 0xac, 0xa6, 0x9d]
     uart_id: desk_uart
 
   - platform: uart
-    name: 'Sit'
+    name: "Sit" # Preset 3 on some control panels
     id: switch_sit
     icon: mdi:chair-rolling
     data: [0x9b, 0x06, 0x02, 0x00, 0x01, 0xac, 0x60, 0x9d]
     uart_id: desk_uart
 
   - platform: uart
-    name: 'Stand'
+    name: "Stand" # Not available for all control panels
     id: switch_stand
     icon: mdi:human-handsup
     data: [0x9b, 0x06, 0x02, 0x10, 0x00, 0xac, 0xac, 0x9d]
     uart_id: desk_uart
 
   - platform: uart
-    name: 'Wake Up'
+    name: "Up"
+    id: switch_up
+    icon: mdi:arrow-up-bold
+    data: [0x9b, 0x06, 0x02, 0x01, 0x00, 0xfc, 0xa0, 0x9d]
+    uart_id: desk_uart
+    internal: true
+
+  - platform: uart
+    name: "Down"
+    id: switch_down
+    icon: mdi:arrow-down-bold
+    data: [0x9b, 0x06, 0x02, 0x02, 0x00, 0x0c, 0xa0, 0x9d]
+    uart_id: desk_uart
+    internal: true
+
+  - platform: uart
+    name: "M"
+    id: switch_m
+    icon: mdi:alpha-m-circle
+    data: [0x9b, 0x06, 0x02, 0x20, 0x00, 0xac, 0xb8, 0x9d]
+    uart_id: desk_uart
+
+  - platform: uart
+    name: "(wake up)" # Not available on all control panels
     id: switch_wake_up
     icon: mdi:gesture-tap-button
     data: [0x9b, 0x06, 0x02, 0x00, 0x00, 0x6c, 0xa1, 0x9d]
