--- a/flexispot-e7.yaml
+++ b/flexispot-e7.yaml
@@ -1,119 +1,348 @@
+################################################################################
+# Flexispot E7 Standing Desk Controller
+# ESPHome 2026.1.5
+#
+# Hardware Setup:
+# - ESP32 Dev Board
+# - UART Connection to desk controller:
+#   - TX (GPIO1) -> Green wire
+#   - RX (GPIO3) -> White/Blue wire
+#   - Virtual Screen (GPIO21) -> Blue wire
+#
+# Features:
+# - Real-time desk height monitoring
+# - Preset buttons (1, 2, Sit, Stand)
+# - Manual up/down controls
+# - Memory button (M)
+# - Automatic height updates to Home Assistant
+################################################################################
+
 substitutions:
-  name: "flexispot-e7"
+  device_name: "flexispot-e7"
   friendly_name: "Flexispot E7"
-  min_height: "73.6" # Min height + 0.1
-  max_height: "122.9" # Max height - 0.1
+  
+  # Safety limits (in cm) - adjust based on your desk model
+  min_height: "73.6"  # Minimum safe height + buffer
+  max_height: "122.9" # Maximum safe height - buffer
+  
+  # UART pins
+  uart_tx_pin: "GPIO1"   # Green wire to desk
+  uart_rx_pin: "GPIO3"   # White/Blue wire to desk
+  screen_pin: "GPIO21"   # Blue wire - virtual screen power
+
+################################################################################
+# Core Configuration
+################################################################################
 
 esphome:
-  name: ${name}
-  platform: esp32 # TODO Change to your platform
-  board: esp32dev # TODO Change to your board
+  name: ${device_name}
+  friendly_name: ${friendly_name}
+  comment: "Flexispot E7 Standing Desk Controller"
   includes:
-    - desk_height_sensor.h
-api:
-  
-ota:
+    - flexispot-e7-height-sensor.h
 
+esp32:
+  board: esp32dev
+  framework:
+    type: arduino
+
+################################################################################
+# Connectivity
+################################################################################
 
 wifi:
   ssid: !secret wifi_ssid
   password: !secret wifi_password
+  
+  # Enable fallback hotspot (captive portal) in case wifi connection fails
+  ap:
+    ssid: "${friendly_name} Fallback"
+    password: !secret fallback_password
 
-# Enable logging
+captive_portal:
+
+# Enable Home Assistant API
+api:
+  encryption:
+    key: !secret api_encryption_key
+
+# Enable Over-The-Air updates
+ota:
+  - platform: esphome
+    password: !secret ota_password
+
+# Web server for direct access (optional - comment out if not needed)
+web_server:
+  port: 80
+
+################################################################################
+# Logging
+################################################################################
+
 logger:
   level: DEBUG
-  baud_rate: 0
+  baud_rate: 0  # Disable serial logging (we're using UART pins for desk)
+  logs:
+    sensor: INFO
+    uart: WARN
+    component: WARN
+
+################################################################################
+# UART Communication
+################################################################################
 
 uart:
   id: desk_uart
   baud_rate: 9600
-  tx_pin: GPIO01 #green
-  rx_pin: GPIO03 #white blue
+  tx_pin: ${uart_tx_pin}
+  rx_pin: ${uart_rx_pin}
+  rx_buffer_size: 256
+  debug:
+    direction: BOTH
+    dummy_receiver: false
+    after:
+      delimiter: [0x9d]
+    sequence:
+      - lambda: |-
+          UARTDebug::log_hex(direction, bytes, ':');
+
+################################################################################
+# Sensors
+################################################################################
 
 sensor:
-  - platform: wifi_signal
-    name: "WiFi Signal"
-    update_interval: 60s
-
-  - platform: uptime
-    name: Uptime
-
+  # Desk height sensor (custom component)
   - platform: custom
     lambda: |-
       auto desk_height_sensor = new DeskHeightSensor(id(desk_uart));
       App.register_component(desk_height_sensor);
       return {desk_height_sensor};
     sensors:
-      id: "desk_height"
-      name: Desk Height
-      unit_of_measurement: cm
-      accuracy_decimals: 1
-      icon: "mdi:counter"
+      - id: desk_height
+        name: "Desk Height"
+        unit_of_measurement: "cm"
+        accuracy_decimals: 1
+        device_class: distance
+        state_class: measurement
+        icon: "mdi:desk"
+        filters:
+          # Filter out zero values (blank display)
+          - filter_out: 0.0
+          # Only update if height changes by at least 0.1cm
+          - delta: 0.1
+          # Optional: clamp to safe range
+          - clamp:
+              min_value: !lambda "return ${min_height};"
+              max_value: !lambda "return ${max_height};"
+
+  # WiFi signal strength
+  - platform: wifi_signal
+    name: "WiFi Signal"
+    update_interval: 60s
+    entity_category: diagnostic
+
+  # Device uptime
+  - platform: uptime
+    name: "Uptime"
+    update_interval: 60s
+    entity_category: diagnostic
+
+################################################################################
+# Binary Sensors
+################################################################################
+
+binary_sensor:
+  # Home Assistant connection status
+  - platform: status
+    name: "Status"
+    entity_category: diagnostic
+
+################################################################################
+# Switches
+################################################################################
 
 switch:
+  # Virtual screen power (keeps desk controller active)
   - platform: gpio
     name: "Virtual Screen"
+    id: virtual_screen
     pin:
-      number: GPIO21 #blue
+      number: ${screen_pin}
       mode: OUTPUT
     restore_mode: ALWAYS_ON
     internal: true
+    entity_category: config
+
+################################################################################
+# Buttons - Desk Controls
+################################################################################
 
 button:
+  # Preset 1
   - platform: uart
     name: "Preset 1"
-    id: switch_preset1
-    icon: mdi:numeric-1-box
-    data: [0x9b, 0x06, 0x02, 0x04, 0x00, 0xac, 0xa3, 0x9d]
+    id: preset_1
+    icon: "mdi:numeric-1-box"
     uart_id: desk_uart
+    data: [0x9b, 0x06, 0x02, 0x04, 0x00, 0xac, 0xa3, 0x9d]
 
+  # Preset 2
   - platform: uart
     name: "Preset 2"
-    id: switch_preset2
-    icon: mdi:numeric-2-box
+    id: preset_2
+    icon: "mdi:numeric-2-box"
+    uart_id: desk_uart
     data: [0x9b, 0x06, 0x02, 0x08, 0x00, 0xac, 0xa6, 0x9d]
-    uart_id: desk_uart
 
+  # Sit preset (Preset 3 on some controllers)
   - platform: uart
-    name: "Sit" # Preset 3 on some control panels
-    id: switch_sit
-    icon: mdi:chair-rolling
+    name: "Sit"
+    id: preset_sit
+    icon: "mdi:chair-rolling"
+    uart_id: desk_uart
     data: [0x9b, 0x06, 0x02, 0x00, 0x01, 0xac, 0x60, 0x9d]
-    uart_id: desk_uart
 
+  # Stand preset (Preset 4 on some controllers)
   - platform: uart
-    name: "Stand" # Not available for all control panels
-    id: switch_stand
-    icon: mdi:human-handsup
-    data: [0x9b, 0x06, 0x02, 0x10, 0x00, 0xac, 0xac, 0x9d]
+    name: "Stand"
+    id: preset_stand
+    icon: "mdi:human-handsup"
     uart_id: desk_uart
+    data: [0x9b, 0x06, 0x02, 0x10, 0x00, 0xac, 0xac, 0x9d]
 
+  # Up button (internal - used by cover component)
   - platform: uart
     name: "Up"
-    id: switch_up
-    icon: mdi:arrow-up-bold
-    data: [0x9b, 0x06, 0x02, 0x01, 0x00, 0xfc, 0xa0, 0x9d]
+    id: button_up
+    icon: "mdi:arrow-up-bold"
     uart_id: desk_uart
+    data: [0x9b, 0x06, 0x02, 0x01, 0x00, 0xfc, 0xa0, 0x9d]
     internal: true
 
+  # Down button (internal - used by cover component)
   - platform: uart
     name: "Down"
-    id: switch_down
-    icon: mdi:arrow-down-bold
-    data: [0x9b, 0x06, 0x02, 0x02, 0x00, 0x0c, 0xa0, 0x9d]
+    id: button_down
+    icon: "mdi:arrow-down-bold"
     uart_id: desk_uart
+    data: [0x9b, 0x06, 0x02, 0x02, 0x00, 0x0c, 0xa0, 0x9d]
     internal: true
 
+  # Memory button (M)
   - platform: uart
-    name: "M"
-    id: switch_m
-    icon: mdi:alpha-m-circle
+    name: "Memory (M)"
+    id: button_memory
+    icon: "mdi:alpha-m-circle"
+    uart_id: desk_uart
     data: [0x9b, 0x06, 0x02, 0x20, 0x00, 0xac, 0xb8, 0x9d]
-    uart_id: desk_uart
 
+  # Wake up command (some controllers need this)
   - platform: uart
-    name: "(wake up)" # Not available on all control panels
-    id: switch_wake_up
-    icon: mdi:gesture-tap-button
-    data: [0x9b, 0x06, 0x02, 0x00, 0x00, 0x6c, 0xa1, 0x9d]
+    name: "Wake Up"
+    id: button_wake
+    icon: "mdi:gesture-tap-button"
     uart_id: desk_uart
+    data: [0x9b, 0x06, 0x02, 0x00, 0x00, 0x6c, 0xa1, 0x9d]
+    internal: true
+
+  # Restart ESP32
+  - platform: restart
+    name: "Restart"
+    entity_category: diagnostic
+
+################################################################################
+# Cover Component - Provides nice Home Assistant UI
+################################################################################
+
+cover:
+  - platform: template
+    name: "Desk"
+    id: desk_cover
+    device_class: damper
+    
+    # Current position (0-100%)
+    lambda: |-
+      float height = id(desk_height).state;
+      float min = ${min_height};
+      float max = ${max_height};
+      if (height > 0) {
+        float position = (height - min) / (max - min);
+        return position;
+      }
+      return 0.5; // Default to 50% if unknown
+    
+    # Open = move to max height (standing)
+    open_action:
+      - button.press: preset_stand
+    
+    # Close = move to min height (sitting)
+    close_action:
+      - button.press: preset_sit
+    
+    # Stop button
+    stop_action:
+      - button.press: button_wake
+    
+    optimistic: false
+
+################################################################################
+# Number Components - Manual Height Control
+################################################################################
+
+number:
+  # Target height setter (for advanced users)
+  - platform: template
+    name: "Target Height"
+    id: target_height
+    icon: "mdi:target"
+    unit_of_measurement: "cm"
+    min_value: !lambda "return ${min_height};"
+    max_value: !lambda "return ${max_height};"
+    step: 0.1
+    mode: box
+    optimistic: true
+    entity_category: config
+    set_action:
+      - lambda: |-
+          float target = x;
+          float current = id(desk_height).state;
+          ESP_LOGI("desk", "Target: %.1f cm, Current: %.1f cm", target, current);
+          // Note: Precise height control requires a more complex algorithm
+          // For now, this just shows the UI - implement custom logic as needed
+
+################################################################################
+# Text Sensors
+################################################################################
+
+text_sensor:
+  # ESPHome version
+  - platform: version
+    name: "ESPHome Version"
+    entity_category: diagnostic
+    
+  # WiFi info
+  - platform: wifi_info
+    ip_address:
+      name: "IP Address"
+      entity_category: diagnostic
+    ssid:
+      name: "Connected SSID"
+      entity_category: diagnostic
+
+################################################################################
+# Interval - Periodic Health Check
+################################################################################
+
+interval:
+  # Send wake command every 30 seconds to keep connection alive
+  - interval: 30s
+    then:
+      - button.press: button_wake
+
+################################################################################
+# Time - Sync with Home Assistant
+################################################################################
+
+time:
+  - platform: homeassistant
+    id: homeassistant_time
