--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,18 @@
-# Gitignore settings for ESPHome
-# This is an example and may include too much for your use-case.
-# You can modify this file to suit your needs.
-.esphome/
+# Secrets (contains WiFi credentials)
 secrets.yaml
+
+# ESPHome build artifacts
+.esphome/
+__pycache__/
+*.pyc
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
